--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Helvetica,sans-serif;
   text-align: center;
   width: 50%;
-  margin: 0 auto;
+  margin: 100px auto;
   padding: 30px;
   border: 1px solid black;
 }
